welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:8: error: ';' expected but 'else' found.
  } else {
    ^